--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
         <div>
             <div class="gameinfo">
                 <div class="turn">Turn for X</div>
-                <button id="reset">Reset</button>
             </div>
+            <div class="button">
+                <button id="reset" class="bcl">Reset</button>
+            <button id="replay" class="bcl">Replay</button>
+        </div>
             <div class="img">
                 <img  class="gif" src="music/winner.gif" alt="">
             </div>
